AB#187081: Fixed cards alignment.

--- a/docroot/themes/custom/emulsifymars/components/03-organisms/grid/_ajax-card-grid.scss
+++ b/docroot/themes/custom/emulsifymars/components/03-organisms/grid/_ajax-card-grid.scss
@@ -91,5 +91,10 @@
 
   &__item_wrapper {
     width: 25%;
+
+    & > section, & > article {
+      display: block;
+      margin: 0 auto;
+    }
   }
 }
